--- a/style.css
+++ b/style.css
@@ -48,6 +48,27 @@ p {
   margin-top: 4px;
   transition: 0.3s ease;
 }
+/* .active {
+    left: 0px !important;
+} */
+#side-bar.active {
+  left: 0;
+}
+.active span {
+  position: absolute;
+}
+.active span:nth-child(1) {
+  transform: rotate(45deg);
+}
+.active span:nth-child(2) {
+  opacity: 0;
+}
+.active span:nth-child(3) {
+  transform: rotate(-45deg);
+}
+.active ~ .content {
+  opacity: 0.3;
+}
 li {
   color: #292929;
   list-style: none;
